abstract of seminar last version

--- a/doc/cours/PRBBSeminar/abstracs.tex
+++ b/doc/cours/PRBBSeminar/abstracs.tex
@@ -1,5 +1,4 @@
 \documentclass[10pt,letterpaper]{article}
-
 \usepackage[margin=1in]{geometry}
 \usepackage{graphicx}
 
@@ -40,7 +39,7 @@
 \vspace{2cm}
 
 \section{ABSTRACT: Cell Communication}
-http://www.prbb.org/arxiu/event/1622
+%http://www.prbb.org/arxiu/event/1622
 \begin{itemize}
     \item Seminar Title: Principles underlying cells talking to each other with diffusing signals
     \item Speaker: Hyun Youk
@@ -48,27 +47,30 @@ http://www.prbb.org/arxiu/event/1622
     \item Abstract:
 \end{itemize}
 
+In this talk, Hyun Youk presented his studies about ``Cell Communications''. His main object of study are cells that he calls ``Quorum sensing cells''. They are made by autocrine cells, able to secrete molecule that can in turn change the secretion of that same cell. He presents us how autocrine cells can turn out to be ``social'' cells. The main idea is that such cells, when in certain amount can interact and auto-organize themselves and exhibits properties observed in different part of the human system.
 
-Amount of autonomy
-Amount of collectiveness
+One of the impressive properties of the studies leaded by Pr Youk is that they mix highly engineered cells design via complex and innovative synthetic Biology methods and Computational. Mixing those two approach they were able to synthetically create cells responding to different condition in very similar way than the mathematical model they studied.  With the articulation of those two methods they studied how, given some particular condition, the ``social'' cell will behave with more or less autonomy and how they will be synchronized inside of more or less bigger collectives. They thus shown theoretical \emph{and} empirically, how some cells with very general properties, can be used to design system with crucial properties that can be found in really different biological systems. 
 
-Cell communication secrete and sensing cells
-Quorum sensing cells (social)
-Autocrine cells (cell communication)
-Secret and send circuit : a similar circuit
-Synthetic approach from bottom up
+%Amount of autonomy
+%Amount of collectiveness
 
-Experiments mixing models and synthetics boilogy to show how ccell create their onw auto-regulator network.
-
-Celles qui murmuraient à leur propre oreils
-
-From indivual to many. Cell
-
-Entropu of population
+%Cell communication secrete and sensing cells
+%Quorum sensing cells (social)
+%Autocrine cells (cell communication)
+%Secret and send circuit : a similar circuit
+%Synthetic approach from bottom up
+%
+%Experiments mixing models and synthetics boilogy to show how ccell create their onw auto-regulator network.
+%
+%Celles qui murmuraient à leur propre oreils
+%
+%From indivual to many. Cell
+%
+%Entropu of population
 
 
 \section{ABSTRACT: Human Evolution}
-http://www.prbb.org/arxiu/event/1685
+%http://www.prbb.org/arxiu/event/1685
 
 \begin{itemize}
     \item Seminar Title: Reconstructing 40,000 years of Eurasian population history from ancient DNA
@@ -76,35 +78,44 @@ http://www.prbb.org/arxiu/event/1685
     \item Date: 22/01/2016
     \item Abstract: 
 \end{itemize}
-Paleogenomic. Martin sikora
 
-Gènes mirror gzography in europe
-November et al 2008, nature
-Cultural shift and genetic shift
-Otzy the iceman geneome far away from the rest of central Europe.
-Corsega.
+Martin Sikora was previously post-doc in a Lab in the PRBB. He presents us actual publication of himself and close laboratory focusing on genetics studies made on early European (Otzy the iceman, Sunghir peeople\ldots) in order to try to reconstruct the colonisation of Europe done by early human (and Neandhertal) 40\,000 years ago.
 
-Gunther gatherer more close. To northern Europe
-Mesolitique from south
-Cultural context
+Those genetics studies of early European, that Martin called Paleogenomics, are living a great explosion during the last 5 years due to new genetics extraction and sequencage technics that allow researchers to use fewer biological material and thus work on ancient genetics.
 
-Neolithic farmer share with sardenya
+By mixing the new results given by this new Paleogenomics with genomic maps made on actual European population, they can infer what subpopulation in the actual geographic and genetics space share more traits with what kind of early human and thus, give new hint to reconstruct the history of the early colonisation of Europe.
 
-Hunter gather Paleolithic north Europe.
-(2014)
+With these new technics they shed new light on this history, by showing that the colonisation was highly dynamics. They shows that the earliest human found in Europe (Otzy) have a different genetics background than actual European. This suggest a colonisation in different steps, with some of non fructuous first-steps and some inter breedings, between populations from previous colonization's waves, but also with Neanderthal that was in Europe long before Homo Sapiens.
 
-Omrak et al 20016 current biology
-The new aera.
+They also compare the genetics history they recreate with the linguistics and cultural history that had been studied by archaeologist and show how their new findings are consistence with linguistics and cultural migration
 
-2/HG history Paleolithic upper Paleolithic more close to Neanderthal but just one individual.
+%Gènes mirror gzography in europe
+%November et al 2008, nature
+%Cultural shift and genetic shift
+%Otzy the iceman geneome far away from the rest of central Europe.
+%Corsega.
 
-Sunghir!
-Close to kostenki. But not ancestor of HG. Mesure of the the ancestor using drift unit.
-There where early European, but not the direct ancestor of European.
-There happen admixture with Neanderthal.
+%Gunther gatherer more close. To northern Europe
+%Mesolitique from south
+%Cultural context
 
-3/ the genetic origin of European.
-Genetic patern and language. Late creation
+%Neolithic farmer share with sardenya
+%
+%Hunter gather Paleolithic north Europe.
+%(2014)
+%
+%Omrak et al 20016 current biology
+%The new aera.
+%j
+%2/HG history Paleolithic upper Paleolithic more close to Neanderthal but just one individual.
+%
+%Sunghir!
+%Close to kostenki. But not ancestor of HG. Mesure of the ancestor using drift unit.
+%There where early European, but not the direct ancestor of European.
+%There happen admixture with Neanderthal.
+%
+%3/ the genetic origin of European.
+%Genetic patern and language. Late creation
 
 
 \section{ABSTRACT: Gene to Cognition}
@@ -115,173 +126,224 @@ Genetic patern and language. Late creation
     \item Date: 22/02/2016
     \item Abstract:
 \end{itemize}
-Joshua gordon
+Joshua Gordon present us is studies about schizophrenia. One of his big claims that that in his lab, they have been able to propose a ``full'' understanding of a psychological disease by explaining all the steps of the disease : from the genetics mutation, to the cell changes produced by this mutation, to the disfunctionment of the neural network there those cells are implicated, to the impact at the level of the cognitive system where this network is involved and finally to the pathologic behavior the change in those cognitive system generate.  
 
-Gene->cell->circuit->system->behavior
+Such a huge work imply thousand of experiment ranging from synthetics biology to neurophysiology and psychology. 
 
-Schizophrenia exemple.22q11 microdeletion.
-Genetic prob associated with different phenotypes desease
+%Gene->cell->circuit->system->behavior
 
-Mouse model with artificial micro deletion. Tested with T-maze, (delayed non match to sample test. Spatial task to test working memory
+His study start with the gene: 22q11, this gene, whens subject to microdeletion, is associated with different pathological phenotypes.
 
-Muted mouse doesn't succed in the task.
+To test the impact of the gene they first use mouse model with artificial microdeletion. They train thos mouse in a T-maze, where they basically have to learn how to go out. The study simply show that such deletion seems to alter working memory, preventing the mouse to remember how to find the exit. This allows to make a first link between the two extreme of the scale presented before: the genetic problem (microdeletion on 22q11) lead to abnormal behavior (mouse unable to succeed in the T-maze task). 
 
-So the two extreme of the scale. The gene (microdeletion) to behav (t.maze task).
 
-Hypocampus with prefrontal cortex. Both are altered , interaction between both are altered.
-Syncor or asyncro local field potential (LFP) as EEG but deep in brain. In the hypocampus. Single spike in the prefrontal.
-Statistically phase between prefrontal spikes and hippocampus phase.
+They then study what cognitive systems are impacted: they detect problem in the  hypocampus and prefrontal prefontal. Both sytems seems altered, as well as the interaction between them. Those results were obtained by measuring the synchronicity of Local Field Potential (a particular mechanics for measuring electromagnetic waves deep inside the cortex). 
+By detecting statistically phase between prefrontal spikes and hippocampus phases they can predict if the behavior of mice will be altered or not. 
+Starting from that, they propose a wide range of study from computer model to behavioral studies, neurphysiological and genetics manipulation to understand what is wrong in the communication between the two zone.  They show that the problem come from a gene responsible in axon development and growing and that alter the branching pattern that are less complex in the abnormal animals.
 
-In muted mice?:
-Phase locking.? Computer move.. I don't get it.b
-Hipocmpus send info to PFC.
+%Thus, interaction that are measured by testing the rate of synchronicity between the two zone). 
 
-The dedixite in synchronization can predict the time of learning in muted mice.
 
-How arise the synchronization and why desynchronization appears?
+%Hypocampus with prefrontal cortex. Both are altered , interaction between both are altered.
+%Syncor or asyncro local field potential (LFP) as EEG but deep in brain. In the hypocampus. Single spike in the prefrontal.
+%Mouse model with artificial micro deletion. Tested with T-maze, (delayed non match to sample test. Spatial task to test working memory
 
-No projection between dorsal hypocampus and PFC so need pass through the ventral. Truc pompe qui inhibite avec des fibre optique.
-Allow to remove the direct connexion between ventral hippo to PFC. (Spellman et. Al nature 2015)
-But pb with the setup.
-So more complex task
-Record of neurones to see if PFC encode the goal
-Using max margin linear classifier. To try to see if the firing rate record can help to classifier where is the mice.
+%Muted mouse doesn't succed in the task.
+%
+%So the two extreme of the scale. The gene (microdeletion) to behav (t.maze task).
 
-The link between pfx and hippocampus is used only to record the goal. So partial explanation at the circuit level.
-
-Gene palmitoylation (Mukai et. Al, Neuron 2015)
-Zdhhcc8
-Problem of axon development and growing. Branching pattern AR less complex in muted animal. They link the mutation to protein to phenotypes.
-Inject Gsk3beta antagonist to recreate the good axone. Tamura et al neurone 2016.
-Reuse of the classifier. 
+%In muted mice?:
+%Phase locking.? Computer move.. I don't get it.b
+%Hipocmpus send info to PFC.
+%
+%The dedixite in synchronization can predict the time of learning in muted mice.
+%
+%How arise the synchronization and why desynchronization appears?
+%
+%No projection between dorsal hypocampus and PFC so need pass through the ventral. Truc pompe qui inhibite avec des fibre optique.
+%Allow to remove the direct connexion between ventral hippo to PFC. (Spellman et. Al nature 2015)
+%But pb with the setup.
+%So more complex task
+%Record of neurones to see if PFC encode the goal
+%Using max margin linear classifier. To try to see if the firing rate record can help to classifier where is the mice.
+%
+%The link between pfx and hippocampus is used only to record the goal. So partial explanation at the circuit level.
+%
+%Gene palmitoylation (Mukai et. Al, Neuron 2015)
+%Zdhhcc8
+%Problem of axon development and growing. Branching pattern AR less complex in muted animal. They link the mutation to protein to phenotypes.
+%Inject Gsk3beta antagonist to recreate the good axone. Tamura et al neurone 2016.
+%Reuse of the classifier. 
 
 
 \section{ABSTRACT: Sampling and Social relasshion}
-http://cbc.upf.edu/node/36187
+%http://cbc.upf.edu/node/36187
 \begin{itemize}
     \item Seminar Title: Selective Information Sampling and Judgments in Social Environments.
-    \item Speaker: Gaël Le Mens
+    \item Speaker: Ga\"el Le Mens
     \item Date: 19/02/2016
     \item Abstract:
 \end{itemize}
-Behaviroal Sciences, Expe vs Field
-Formation of social influance
+Ga\"el Le Mens is an economist working on the cognitive side of economy. In this talk he presents us some of the work he did about how people change their jugement by select information in their environment and how this selection can be modified by personal experience, or biased toward sampling problem. 
 
-A Conformity Behavior
-B or inference
+As an example he gives us the example of people doing Behavioral Sciences (in general). How and why, one student in that field will prefer to do lab experiment or go directly to the field? Le Mens propose that this is a two side problem. In one side lays the ``inference'' process, where our choice is only made after repeated use of both technic and selection based on our personal experience, in the other side lays the ``sampling'' process, where one will choose the technic he will used by selecting among the technics he is used to see other people using. 
 
-C? no prpularity no motivation cognitive
-(note sur le carnet normal)
-As pointed out by Herbert Simon more than 50 years ago, understanding human judgment requires examining both how the mind processes information and the structure of the information provided by their environment. Much psychological research focuses on the information processing component of Simon’s proposition. In this talk, I will review research that advances an alternative perspective which emphasizes the structure of the environment. 
+In the different studies presented, Le Mens showed how our decision can be impacted by the observation made in our social environment and how the inference we made with partial information can 
 
-The key mechanism is that the social environment exposes people to activities and objects they might otherwise have avoided: people get exposed to the activities their friends engage in, that their bosses instruct them to do, etc. By shaping the information samples to which people have access, the social structure has systematic effects on belief formation. As I will demonstrate, this approach offers alternative explanations, with distinct empirical predictions, for a wide range of belief and attitude patterns, including in-group bias, cynicism, preference for popular and novel items, and belief homogeneity within social groups. 
+To do so he proposed experiments based on money games where people are more or less exposed to social learning. With this experiments they extract some parameter that are changing the people choice and integrate those parameter in mathematical models. They then test the accuracy of this model on existing database such as the kind of restaurant people choose to go and like, and how the experience of other can modify or choice and drive the evolution of the prestige of the restaurants.
 
+%under too few try can  propantion to choo Behaviroal Sciences, Expe vs Field
+%Formation of social influance
+%
+%A Conformity Behavior
+%B or inference
+%
+%C? no prpularity no motivation cognitive
+%(note sur le carnet normal)
+%As pointed out by Herbert Simon more than 50 years ago, understanding human judgment requires examining both how the mind processes information and the structure of the information provided by their environment. Much psychological research focuses on the information processing component of Simon’s proposition. In this talk, I will review research that advances an alternative perspective which emphasizes the structure of the environment. 
+%
+%The key mechanism is that the social environment exposes people to activities and objects they might otherwise have avoided: people get exposed to the activities their friends engage in, that their bosses instruct them to do, etc. By shaping the information samples to which people have access, the social structure has systematic effects on belief formation. As I will demonstrate, this approach offers alternative explanations, with distinct empirical predictions, for a wide range of belief and attitude patterns, including in-group bias, cynicism, preference for popular and novel items, and belief homogeneity within social groups. 
+%
 \section{ABSTRACT: Deepmind}
 \begin{itemize}
     \item Seminar Title: Deep neural networks and reinforcement learning for building intelligent machines
     \item Speaker: Silvia Chiappa
     \item Date: 26/02/2016
-    \item Abstract: La merde de deep Blue
+    \item Abstract: 
 \end{itemize}
-(note also sur le carnet)
+Silvia Chiappa is member of the Deep Mind team, a group of people hired by Google working on artificial intelligence and Deep Belief Network (that have recently for the first time, beat the pest Go player of the World). She presented us some of the firsts experiments they made using deep neural network and how they used those tools to learn to computer how to play games.  She showed us an example like pong and Pacman. In those game, without any \emph{a priori} knowledge about the game, no rules are given, they only gave to network the full screen of the game and the different states of the button as input. The network is trained using  the score it obtains will playings. They shown that without nothing else, the neural network is able to learn and play such games.  
+%(note also sur le carnet) que j'ai perdu)
 
 
-\section{ABSTRACT: Intelectual Disability }
+\section{ABSTRACT: Intellectual Disability }
 \begin{itemize}
     \item Seminar Title: Rembrandt: Remodelling brain development in intellectual disability 
     \item Speaker: Mara Dierssen
     \item Date: 20/04/2016
-    \item Abstract: Down syndrome (DS) is the most common genetic form of intellectual disability, with an estimated incidence of more than 200,000 cases per year worldwide. In DS brain, suboptimal network architecture and altered synaptic communication arising from neurodevelopmental impairment are key determinants of cognitive defects. Regardless of their molecular cause, most DSs are characterized by neural plasticity disruption, and therefore this is a natural target for therapeutic purposes. Our group has demonstrated that epigallocatechin-3-gallate (EGCG), the most abundant catechin of green tea, promotes learning and memory recovery, produces extensive dendritic remodeling in DS mouse models and significantly improves memory, executive functions and adaptive behavior along with increased functional connectivity in specific brain regions of DS adults (Phase I and Phase II clinical trials). This has been a crucial step in treating intellectual disability that has opened new important questions. 
+    \item Abstract:
 \end{itemize}
 
-Neuroscience pharmacology. Neuropharmacology.
-An abandoned place. Because company are still in the neural doctrine. Nerone are the unit of computation of the brain.
-
-Ramon y cajal and Sherrington .
-
-Mental function arise from overlapping neural network in temporal syncrony. Many to many connexion connectivity matrices.
-
-Lorente nó already say that the design is recurrent and this recurrence allow functional reverberation.
-
-Circuit fine tuned by plasticity
-
-Trisomy 21 down syndrome cognitive phenotype.
-
-Pathological morphology: input and output problems-> define of the connectivity matrices .
-Less dendric spines the tree is less dense.
-
-Find the protein that pose problem. Dyrk1A
-
-Concentration of this protine is important too much or to less is bad
-German patterson desin mathematical model to see the dosage effect.
-Once slotted the protein what happen at the physiological level?
-Difiremce on oscillations?
-Up and down oscillaty state.from physiology oscillatory state to the behavior.
-
-Hypotheses about GABA the inhibitory path.
-
-Less inhibitory content so wrong hypotheses? So should come from something else.
-At the network level.using a mathematical model about conductivity
-The model show that by less inhibitory is sufficient to reduce gamma stouf. Tough work.
-Now we know how to recreate back the phenotypes.
-
-Plasticity can change the connection.plasticity to avoid decline. Environment to restore the phenotypes.
-Find a molecule to regulating the missing function. Egcg. Test on mouse.
-
-Test in human molecule + cognitive simulation
-Lab test + quality of life + neuroimagery.
-
-MRI and tms to validate the fact that connectivity is restored.
-
-Molecular rewroment
-
-Proteomics.b
-
-No targetic specific molecule but global change cbinaong different approay pharmacology/cognitive etc\ldots.
+%	    Down syndrome (DS) is the most common genetic form of intellectual disability, with an estimated incidence of more than 200,000 cases per year worldwide. In DS brain, suboptimal network architecture and altered synaptic communication arising from neurodevelopmental impairment are key determinants of cognitive defects. Regardless of their molecular cause, most DSs are characterized by neural plasticity disruption, and therefore this is a natural target for therapeutic purposes. Our group has demonstrated that epigallocatechin-3-gallate (EGCG), the most abundant catechin of green tea, promotes learning and memory recovery, produces extensive dendritic remodeling in DS mouse models and significantly improves memory, executive functions and adaptive behavior along with increased functional connectivity in specific brain regions of DS adults (Phase I and Phase II clinical trials). This has been a crucial step in treating intellectual disability that has opened new important questions. 
+%
 
 
-\section{ABSTRACT RIN4}
+In her talk Mara Dierssen try to re-habilitate neuropharmacology. She argues that this area of research is an 
+ abandoned place, mainly because company are still in the neural doctrine. This view of neuroscience comes back to Ramon y Cajal and Sherrington and that state that neurons are the unit of computation of the brain. 
+On the other hand, nowadays advanced in neuroscience have shown, more and more, than mental function arise from overlapping neural network in temporal synchrony. Many to many connexion connectivity matrices. Even though some people like Lorente de Nó already said that the design is recurrent and this recurrence allow functional reverberation, and no more and more focus in neuroscience has been put on the understanding of network of neurons as the key of computation, as those circuits can be fine tuned by plasticity
+
+The aim of Pr Dierssen is thus to argue that Neuropharmacology has to take into account this new view of neuroscience into account in order to advance again. To do so she presented work made on the case of the genetic trisomy 21 down syndrome cognitive phenotype.
+
+They observed that at the neurological problem, the morphology of the pathological neurons exhibits less dendric spines, with a dendric tree less dense. This leads to input and output problems  define of the connectivity matrices. By different methods they shown the problematics protein: Dyrk1A. Mixing different technics, ranging from MRI, to Mathematial modeling and to behavioral experiment on mice and with human, they show that the problem caused by the proteins (ie, the poverty of dendric tree),  leads to oscillatory problem between brains regions due to network connectivity problems. They show that by mixing pharamacological treatments (that they can design as they know the protein involved) and socio-cognitive treatments, the normal phenotype can be recreates with a high level a success. 
+
+This support the idea that, by taking into account the neural circuit as a whole, as the results of the interaction of genetics component and socio-cognitive interaction, successful new therapy can be designed, that work far better than the focus on finding \emph{the} molecule that will solve all problems.
+
+%oncentration of this protine is important too much or to less is bad
+%German patterson desin mathematical model to see the dosage effect.
+%Once slotted the protein what happen at the physiological level?
+%Difiremce on oscillations?
+%Up and down oscillaty state.from physiology oscillatory state to the behavior.
+%
+%Hypotheses about GABA the inhibitory path.
+%
+%Less inhibitory content so wrong hypotheses? So should come from something else.
+%At the network level.using a mathematical model about conductivity
+%The model show that by less inhibitory is sufficient to reduce gamma stouf. Tough work.
+%Now we know how to recreate back the phenotypes.
+%
+%Plasticity can change the connection.plasticity to avoid decline. Environment to restore the phenotypes.
+%Find a molecule to regulating the missing function. Egcg. Test on mouse.
+%
+%Test in human molecule + cognitive simulation
+%Lab test + quality of life + neuroimagery.
+%
+%MRI and tms to validate the fact that connectivity is restored.
+%
+%Molecular rewroment
+%
+%Proteomics.b
+%
+%No targetic specific molecule but global change cbinaong different approay pharmacology/cognitive etc\ldots.
+%
+%
+\section{RIN4}
 Session of the 20st of April :
 
 \begin{itemize}
-    \item Lego \& gene
-    \item All is not genetic
-    \item Psycology animals cognition
-    \item Colombian slang Spanish traduction in different langiuage
-    \item Bike in barcelone
-    \item l'anthorpologue art and internet
-    \item Technical implementation of 4G
-    \item Map representation and Psycology
-    \item Simon Carrignon
+    \item Lego \& gene: In that talk was presented how animals can be classified gives some particular genetics measurement 
+    \item All is not genetic: this talk presented with some example how and why all the information used to build biological individual cannot be only carried by genetics, and that some epigenetic factors have to be taking into account.
+    \item Psychology animals cognition: in this talk where presented how animal learn to avoid dangers even if here is no danger and in what condition.
+    \item Colombian slang Spanish: This talk presented how a Columbian slang has been translate in different language and how those translations show underline structure and differences shared by the language. 
+    \item Bike in Barcelone
+    \item Art and Internet: This talked presented how internet have transformed the way to do art, and how artist know use internet and computer to create new, interactive artistic pieces.
+    \item Technical implementation of 5G: this talk presented some technical problems that the deployment of 5G technologies will have to encompass
+    \item Map representation and Psychology: in this talk was presented how some projections used to draw map can have a deep impact on psychological understanding on the world.
+    item Models and history: in this talk I presented how and why we can use computer model to study history.
 \end{itemize}
 
 \section{ABSTRACT: Prosody and Learning}
+%ihttp://cbc.upf.edu/node/36432
+\begin{itemize}
+    \item Seminar Title: From Sound to Early Grammar 
+    \item Speaker: Rushen Shi
+    \item Date: 27/04/2016
+    \item Abstract:
+\end{itemize}
+In her talk, Rusher Shi presented sstudies were they show how young infants acquire grammatical knowledge. The question they challenged with their study ar the following: does it exist some grammatical knowledge in the words themselves that infants can understand? or does such properties are carried by the prosody and intonation properties of the sentences? To answer those questions Pr Shi propose different experiments with ``false word'' that seems to be words but aren't, and false sentences, that respect (or not) some prosody supposed to carry the grammatical information of the sentence.
+
+They create with those false words different ``syntactic''  constructions that they read to children born in totally different language environment that the language use to build the grammatical informations (to prevent some pre-native learning of the words). They present these artificial syntactic constructions with real construction, and by varying  different combinations of real-words, false-words and prosody properties of the sentences, they show infants can detect bad grammatical construction without any notion of any language. 
+
+This results suggest 1) that infants are able to have sophisticate syntactic representation earlier than it was previously described and 2)that prosody is one of the central tool used by early infants to construct such syntactic representation.
+
+%In this talk I will show that infants use prosody and functional items to break into early grammar and acquire syntactic structures. According to the classic view, preverbal and early verbal infants lack grammatical knowledge. I will discuss empirical findings from my lab showing that infants begin to acquire aspects of the grammar from the first year of life, and that they demonstrate sophisticated syntactic representations during the second year of life.
 
 \section{ABSTRACT: Detect selection}
-Fct
-Selection in rare positive mutation
-IHS and nSL detect polygenic haplotype and. Homozygosity.
-H12
-Artificial selection.
-10 chromosomes of 1M bases
+\begin{itemize}
+    \item Seminar Title: Detecting selection with haplotype-based methods: benchmarking polygenic selection and application to Heliconius butterflies
+    \item Speaker: Ángeles de Cara
+    \item Date: 09/05/2016
+    \item Abstract:
+\end{itemize}
+ 
+In her talk. A. de Cara how it is possible to detect selection using statistics tool based on haplotype genetics sequences. She first made a review of different statistics models that allow to detect selection in big haplotype.  She thus present us here case study, the Heliconius butterflies. 
 
+The methods she review first, allow in theory to detect the action of selection in rare positive mutation able to compare huge genome with million of genetics bases.  The method she compares are IHS, nSL and H12 and she build artificial dataset of genomes made of 10 chromosomes with 1 million bases, using polygenic traits and artificial selection in order to create a benchmark. With this artificial setup they showed that these methods work mainly when selection is strong and traits are not so much polygenic. 
 
-Determine if detection method are good
-Power and false positive pas competition
-Using Windows of 200position.
-Fixe the windows and make test.
-Elle me me convint pas du tout du tout.
+They re-enforce their finding by testing again those methods on the tropical butterflies Heliconius. Those butterfly tends to mimics other species for different reasons and is an particular case of associative mating. They look at the species Numata and Melpomene, where it exists balanced selection due to associative mating. They showed that IHS and nSL work in particular case, whereas if H12 work also, it is too costly to be really useful. The overall work was still in progress as she needed yet to find more data on the butterfly to really compare the three methods.
 
+%of different species and morphs, to test the power of these methods on known regions under selection, and to infer new candidates of selection.
+%IHS and nSL detect polygenic haplotype and. Homozygosity.
+%H12
+%Artificial selection.
+%10 chromosomes of 1M bases
 
-Benchmark with data from heliconius which mimic other species.
-Numata vs Melpomene
-Balanced selection associative mating
-IHS nSL work with Windows
-H12 also but too costly.
+%Determine if detection method are good
+%Power and false positive pas competition
+%Using Windows of 200position.
+%Fixe the windows and make test.
+%Elle me me convint pas du tout du tout.
+%
+%
+%Benchmark with data from heliconius which mimic other species.
+%Numata vs Melpomene
+%Balanced selection associative mating
+%IHS nSL work with Windows
+%H12 also but too costly.
 
+\section{ABSTRACT: Computational Social Science }
+\begin{itemize}
+    \item Seminar Title: 
+    \item Speaker: Hannah Wallach 
+    \item Date: 19/12/2015
+    \item (Note: Non-PRBB seminar, talk given during NIPS 2015)
+    \item Abstract:
+\end{itemize}
+Hannah Wallach presented us various study she has been working on with her team. In those studies she try to apply high level machine learning methods to study political and social science.
 
+She first presented a tool that used Bayesian admixture model to explore communication networks and topic-specific subnetworks in email data sets.  By mixing tecnhique from topic modelling and network analysis she is able to visualizate network of interaction between people inside a group of people, but also latent topic sub-community inside the same network, without a priori knowledge on such sub-community. Those study allow to make quantitative analysis on the social relationship within the group of interacting people, to visualize the hierarchical relation between those people, and to see who is working on what kind of topic within the group. It's particularly relevent to detect gender disequilibrium within particular different task related topic (decision/management process vs  
 
+The second work she presented try to extract latent cooperation networks between country using a world database and too look at the evolution of such network. To do so they use some complex machin learning tool based on matrices maniulation and latent semantic analysise that again work with Bayesian inference to recreate relshionship between country and the semantic value of such relationship (ally, enemy, neutral). With their methods, they where able to extract and retrace the world political history by using only data containing information such as ``PX do A to PY'' where PX and PY are two country and A is an action of the type ``attacks'',``sends troupes'',``menaces'',\ldots, and no a priori historical knowledge.
 
+The general presentation of Pr. Wallach was a nice illustration of the usefulness of quantitative methods, and more precisely machine learning methods, to study sociological and political relationship. They are he perfect tools to allow sociologist and historians to quantify their hypothesis and detect new patterns undetectable with simpler tools.
 \end{document}
 
 
