update my biblio+short bio for severa ochoa

--- a/doc/biblio/bib/SimonCarrignon.bib
+++ b/doc/biblio/bib/SimonCarrignon.bib
@@ -70,12 +70,34 @@
 	year = "2016"
 }
 
-@proceedings{morer2016influenceofthetopologyofculturalnetworksontheequilibriumofanexchangebasedeconomy,
+@misc{morer2016influenceofthetopologyofculturalnetworksontheequilibriumofanexchangebasedeconomy,
 	author = "Morer, Ignacio and Carrignon, Simon and Rubio-Campillo, Xavier",
 	booktitle = "{7th Workshop on Complex Networks (CompleNet 2016) }",
 	location = "Dijon (France)",
 	month = "Avril",
 	title = "{Influence of the topology of cultural networks on the equilibrium of an exchange-based economy}",
+	year = "2016"
+}
+
+@article{montanier2016behavioralspecializationinembodiedevolutionaryroboticswhysodifficult,
+	abstract = "Embodied evolutionary robotics is an on-line distributed learning method used in collective robotics where robots are facing open environments. This paper focuses on learning behavioural specialization, as defined by robots being able to demonstrate different kind of behaviours at the same time (e.g. division of labour). Using a foraging task with two resources available in limited quantities, we show that behavioural specialization is unlikely to evolve in the general case, unless very specific conditions are met regarding interactions between robots (a very sparse communication network is required) and the expected outcome of specialization (specialization into groups of similar sizes is easier to achieve). We also show that the population size (the larger the better) as well as the selection scheme used (favoring exploration over exploitation) both play important -- though not always mandatory -- roles. This research sheds light on why existing embodied evolution algorithms are limited with respect to learning efficient division of labour in the general case, ie. where it is not possible to guess before deployment if behavioural specialization is required or not, and gives directions to overcome current limitations.",
+	author = "Montanier, Jean-Marc and Carrignon, Simon and Bredeche, Nicolas",
+	doi = "10.3389/frobt.2016.00038",
+	issn = "2296-9144",
+	journal = "Frontiers in Robotics and AI",
+	pages = "38",
+	title = "{Behavioral Specialization in Embodied Evolutionary Robotics: Why So Difficult?}",
+	url = "http://journal.frontiersin.org/article/10.3389/frobt.2016.00038",
+	volume = "3",
+	year = "2016"
+}
+
+@inproceedings{medernach2016evolution,
+	author = "Medernach, David and Carrignon, Simon and Doursat, Ren{\'e} and Kowaliw, Taras and Fitzgerald, Jeannie and Ryan, Conor",
+	booktitle = "{Proceedings of the Artificial Life Conference 2016}",
+	pages = "216-223",
+	publisher = "MIT Press",
+	title = "{Evolution of heterogeneous cellular automata in fluctuating environments}",
 	year = "2016"
 }
 
