--- a/doc/conferences/20170209_JIPI/abstract.tex
+++ b/doc/conferences/20170209_JIPI/abstract.tex
@@ -1,17 +1,27 @@
-We propose a framework to study the co-evolution of cultural change and trade. 
+####Abstract send to JIPI 2017
 
-Cultural change comprises  processes that modify spread of information by social interaction within a population and numerous social scientists are using an evolutionary theory to model this.
-Here we follow this trend and propose a model to study economics. Economics is seen here as a social activity that depends on particular cultural traits: the value attributed to goods used to trade during the economic activity. 
 
-Multiple cultural processes could influence the way those values evolve through space and time leading to different trade dynamics.
+Title: Computer Simulation to understand the co-evolution of culture and economy.
 
-We focus on the way those values are transmitted and vary form individual to individual, and on the bias that affect this transmission. We propose a framework that allow us to implement and test hypotheses and claims made about the nature of such transmission processes and bias and study how those claims and hypotheses affects a given economy.
+Cultural changes comprise processes that modify the spread of information by social interaction within a population. To model and understand those processes, a growing number of social scientists are using Evolutionary Theory and formal models.
+We follow this trend and present a multi agent model to study how social learning strategies and cultural changes impact economic and trade dynamics. 
 
-The design aims for a trade-off between the flexibility necessary for the implementation of multiple models and the structure necessary for the comparison between the models implemented. To create this framework we propose an Agent-Based Model relying on agents producing, exchanging and associating values to a list of goods. 
+Economics is seen here as a social activity that depends on particular cultural traits: the value attributed to the goods traded during the economic activity. 
+This value will more or less directly determine the way people will exchange the different goods they have access to, and the results of this trade activity will in turn transform the economic context. This change in economic context will then leads to a reevaluation of the value of the different goods previously used.
 
-We present the key concepts of the framework and two examples of its implementation which allow us to show the flexibility of our framework. Moreover, we compare the results obtained by the two models, thus validating the structure of the framework. Finally, we validate the implementation of a trading model by studying the price structure it produces.
+Multiple cultural processes could influence the way those values are learned, transmitted, shared and reevaluated throughout time from individual to individual. 
+
+We propose a multi agent model to study these mechanisms and how the nature of such processes affects a given economy.
+
+This model allow us:
+	1) To unveil general and theoretical patterns that emerge from such system where two process are co-evolving, the result of on impacting on the dynamic of the otehr and \emph{vice versa}, in a complex retroaction loop making analytical exploration difficult.
+
+	2) To compare such observations  with real world case study in order to understand the cultural and economics dynamics acting during past societies, on which knowledge is often partial, biased and uncertain. 
 
 
 tout ça c'est dla merde.
 Dla grosse merde
 Ça me soule comme c és tpas permit putain. Pas permis
+
+
+Et bien je vais pas te mentir, masi je trouve aps ça tant pourris ou si, who knows
