short biography used for severo ochoa

--- a/doc/administrative_doc/short.tex
+++ b/doc/administrative_doc/short.tex
@@ -23,7 +23,7 @@
 \end{figure}
 
 \subsection*{Short Biography}
-I am PhD student in Computer Applications in Science and Engineering at the Barcelona Supercomputing Center. I hold a M.S. in Cognitive Sciences and a M.A. in History and Philosophy of Science. My work focus on the use of computer modeling and evolutionary method to study Complex Systems ranging from Evolutionary Biology to Human and Cultural Dynamics. Among different projects, I studied the evolution of specialization in swarm of simulated robots, the evolution of altruism in population of simulated social agents and the epistemological aspects of the use of computer simulations and computer models to understand Evolutionary Biology and Social Sciences. My actual PhD thesis explores the interactions between cultural evolution processes (social learning, biased copy,...) and Economic Dynamics (pricing, trading strategies,...) in actual and past societies.
+I am a PhD student in Computer Applications in Science and Engineering at the Barcelona Supercomputing Center. I hold a M.S. in Cognitive Sciences and a M.A. in History and Philosophy of Science. My work focus on the use of computer modeling and evolutionary method to study Complex Systems ranging from Evolutionary Biology to Human and Cultural Dynamics. Among different projects, I studied the evolution of specialization in swarm of simulated robots, the evolution of altruism in population of simulated social agents and the epistemological aspects of the use of computer simulations and computer models to understand Evolutionary Biology and Social Sciences. My actual PhD thesis explores the interactions between cultural evolution processes (social learning, biased copy,...) and Economic Dynamics (pricing, trading strategies,...) in actual and past societies.
 
 
 \subsection*{Selected Bibliography}
