--- a/doc/conferences/20170406_EHBEA/abstract.tex
+++ b/doc/conferences/20170406_EHBEA/abstract.tex
@@ -12,9 +12,10 @@ The aims of this study is to test how different social learning mechanisms can l
 \section{Methods}
 We explore here a model previously build to study the co-evolution between cultural mechanisms and economy. In this original model, groups of agents produce, consume and exchange goods. They learn and adapt the strategies they use to exchange goods by copying the strategies of more successful agents in the population.
 
-In this present study we explore this model using a variation of \emph{Approximate Bayesian Computation} (ABC). ABC  to explore the parameter space of the original model and to compare it to an ideal case where all exchange of goods are made under a well  know economic equilibrium: the  general equilibrium (also called Walrasian equilibrium). ABC allows us to compute how likely different social learning process are able to produce a system where the emergence of a Walrasian Equilibrum is possible. At the same time it allows us to quantify the likelihood of the emergence of such situation under different set of fixed and limited constraints derived from historical cases studies.
+In this present study we explore this model using a variation of \emph{Approximate Bayesian Computation} (ABC). This variation of ABC,a los called Fitted to Optimized Outcome,  to explore the parameter space of the original model and to compare it to an ideal case where all exchange of goods are made under a well  know economic equilibrium: the  general equilibrium (also called Walrasian equilibrium). ABC allows us to compute how likely different social learning process are able to produce a system where the emergence of a Walrasian Equilibrum is possible. At the same time it allows us to quantify the likelihood of the emergence of such situation under different set of fixed and limited constraints derived from historical cases studies.
 
 \section{Results}
+
 
 \section{Conclusion}
 
