--- a/doc/conferences/20170127_YSLRWinterWorkshop/poster.tex
+++ b/doc/conferences/20170127_YSLRWinterWorkshop/poster.tex
@@ -111,27 +111,30 @@
 }
 
 \headerbox{Introduction}{name=introduction,column=0,row=.01}{
+    Economists provide numerous theories to understand human production, consumption and trade activity. Nonetheless, given the complexity and the huge amount of assumptions needed, those theories are hardly integrated in other fields studying related aspect of human activity.
+
+	Following trend initiated by Cultural Evolution studies, we want to fill this gap by providing tools to smoothly articulate theories and hypothesis coming from various fields and quantify the likelihood of such combinations to explain practical case study.
+
+%Cultural change comprises processes that modify spread of information by social interaction within a population~\cite{boyd_origin_2005} and numerous social scientists are using an evolutionary framework to model this~\cite{henrich_evolution_2003}.
+
+	We already implemented such a tool in an agent based model~\cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties} designed to study the co-evolution of economy and culture. Economics is here seen as a social activity that depends on particular cultural traits: the value attributed to goods. Multiple cultural processes (innovation, social learning,\ldots) could influence the way those values evolve through space and time leading to different trade dynamics. 
+	
+	In the present study we combine the ability of the model to go from culture to economics with \emph{Fitting to Idealized Outcomes} (FIO) in order to quantify the likelihood of different innovations rate to lead to a well studied theoretical economic equilibrium: the General Equilibrium.
 
 
-Cultural change comprises processes that modify spread of information by social interaction within a population~\cite{boyd_origin_2005} and numerous social scientists are using an evolutionary framework to model this~\cite{henrich_evolution_2003}.
-
-Here we use the \emph{Fitting to Idealized Outcomes} (FIO) method to explore an agent based framework~\cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties} designed to study the co-evolution of economy and culture. In this framework, economics, is seen as social activity that depends on particular cultural traits: the value attributed to goods used to trade during the economic activity. Multiple cultural processes (innovation, social learning,\ldots) could influence the way those values evolve through space and time leading to different trade dynamics.
-
-The aim of this study is to combine \emph{FIO} with an agent based model to quantify the likelihood of different innovations rate to lead to a General Equilibrium.
 
 }
 
 \headerbox{Method}{name=ud,column=0,below=introduction}{
+    \small
 \subsection*{General Equilibrium}
-In economic theory, a \emph{General Equilibrium} (GE) is reached when, given some available quantities of good, consumer and producers agreed on prices that allow both of them to produce, exchange and consume goods of a particular market in such quantities that nothing is missing nor left in the market and consumer are maximising there utilities. 
+In economic theory, a \emph{General Equilibrium} (GE) is reached when, given some initial endowment, consumers and producers agreed on prices that allow both of them to produce, exchange and consume goods of different markets in such quantities that nothing is missing nor left in the markets (prices are ``market-clearing prices'') and consumers are buying the exact quantities of goods they want (they are maximizing there utilities). 
 
 
 
 \subsection*{Agent Based Model}
-To test what kind of cultural processes allow the emergence of such GE, we use a model already developed to study the co-evolution of culture and economy. We have already shown that this model leads to clearing market price and optimal utility (cf Fig.~\ref{fig:ratioEvol}) for particular set of parameters. In this model, groups of agents produce, consume and exchange goods then adapt their trading strategy by innovating, or by learning from someone else. Those two later aspects are the cultural ones that we want to consider. Here the learning processes will remain the same --the agents will always tend to copy the best other agents, and we concentrate ourselves on the innovation process.
-
-In the model, it is represent by a probability $\mu$ that one agent randomly change the price he attributes to a good. This probability $\mu$ is what we call the innovation rate: we want to quantify for what range of values this parameter is more likely to allow a GE to appear.
-
+To test what kind of cultural processes allow the emergence of such GE, we use a model we previously developed to study the co-evolution of culture and economy. We have already shown that this model leads to market-clearing prices and maximal utility (cf Fig.~\ref{fig:ratioEvol}) for some particular sets of parameters. 
+	\vspace{-.75cm}
 \begin{figure}[H]
 	\begin{tabular}{cc}
 		\includegraphics[width=.5\textwidth]{img/ClearingPriceDistanceEvolutionForTrade-G3N500.pdf}&
@@ -145,12 +148,17 @@ In the model, it is represent by a probability $\mu$ that one agent randomly cha
 	\label{fig:ratioEvol}
 \end{figure}
 
+In this original model, groups of agents produce, consume and exchange goods, and then adapt their trading strategies by \emph{innovating}, or by \emph{learning from someone else}. Those two later aspects are the cultural aspect we want to consider here. More specifically we restrain ourselves to the second one, the \emph{innovation process}. In all the simulations of this study the \emph{social learning mechanism} is the same: at some point, agents will copy the best agents in their social environment.
+
+On the other side, the \emph{innovation process} is implemented as a probability $\mu$ that one agent randomly change the price he attributes to a good. This probability $\mu$ is what we call the innovation rate.
+
+In the following sections we want to quantify the range of values for this parameter that allow the model to end in a GE.
 
 \subsection*{Fitting to Idealized Outcomes}
 
-To quantify the likelihood of different assumption on the rate of innovation to lead to a GE we apply a variation of \emph{Approximate Bayesian Computation} (ABC). ABC relies on Bayesian inference to compute and compare the likelihood of models to explain a set of empirical evidence under different parameter distribution. It has been already fruitfully apply to study changes in socio-cultural construct such as battlefield strategies \cite{rubiocampillo2016modelselectioninhistoricalresearchusingapproximatebayesiancomputation}.
+To do so we apply a variation of \emph{Approximate Bayesian Computation} (ABC). ABC relies on Bayesian inference to compute and compare the likelihood of models to explain a set of empirical evidences under different parameter distributions. It has been already fruitfully applied to study changes in socio-cultural construct such as battlefield strategies~\cite{rubiocampillo2016modelselectioninhistoricalresearchusingapproximatebayesiancomputation}.
 
-Here we use a slight variation of ABC, called \emph{Fitting to Idealized Outcomes} (FIO)~\cite{gallagher2015transitiontofarmingmorelikelyforsmallconservativegroupswithpropertyrightsbutincreasedproductivityisnotessential}, as it compares the parameter space of a model to the output of known theoretical model (instead of empirical evidence).  
+Here we use a slight variation of ABC, called \emph{Fitting to Idealized Outcomes} (FIO)~\cite{gallagher2015transitiontofarmingmorelikelyforsmallconservativegroupswithpropertyrightsbutincreasedproductivityisnotessential}, as it compares the parameter space of a model to the output of known theoretical model, instead of empirical evidence.
 
 \vspace{.2cm}
 {
@@ -161,11 +169,11 @@ Here we use a slight variation of ABC, called \emph{Fitting to Idealized Outcome
 	\begin{multicols*}{2}
 	    \begin{enumerate}
 		    \compresslist
-		\item sample $\mu$ from uniform distribution ($\mu \sim U(0,1)$)
+		\item sample of $\mu$ with $\mu\sim U(0,1)$
 		\item run simulations with innovation rate = $\mu$ 
-		\item compute distance $\epsilon$ to idealize outcome (GE):  
+		\item compute distance $\epsilon$ to idealize outcome~(GE):  
 		    \begin{align*}
-			\epsilon = \frac{ \sum_{i=1}^{n} s_n-s_{ge} }{n}   
+			\epsilon = \frac{ \sum_{i=1}^{n} s_i-s_{ge} }{n}   
 		    \end{align*}
 		    {\tiny ($n$: total number of agents, $s_i$ score of agent i, $s_{ge}$: ideal score)}
 		    \vfill
@@ -181,27 +189,32 @@ Here we use a slight variation of ABC, called \emph{Fitting to Idealized Outcome
 
 
 
-\headerbox{Results}{name=res1,column=1,span=1,row=.01}{
+\headerbox{Results \& Analysis}{name=res1,column=1,span=1,row=.01}{
 
-    The Figure~\ref{fig:abc} show the result of the Fitting to Idealized Outcomes. The posterior distribution of the value of $\mu$ used by the best simulation clearly shows that only a restricted range of innovation rate allow the equilibrium to emerge. Without surprise this innovation rate as to be inferior to $0.5$, it would otherwise means that agents are changing their pices almos once every tw time step. This would make any comparison between agents and would prevent any positive change to be fixed in the population.
-
+    The Figure~\ref{fig:abc} shows the results of the Fitting to Idealized Outcomes. The original model was run with 600 agents exchanging and producing 3 goods during $10\,000$ time steps. 
+    
+    The posterior distribution of the value of $\mu$ used by the best simulations clearly shows that only a restricted range of innovation rate allow the equilibrium to emerge. 
 \begin{figure}[H]
 	\centering
 		\includegraphics[width=.8\textwidth]{img/ABC.pdf} 
-		\vspace{-1cm}
-		\caption{\small Result of the FIO: In green the prior distribution where $\mu$ is sampled from. In green the posterior distribution of $\mu$ for the $200$ closest simulation  to the GE. }
+		\vspace{-.5cm}
+		\caption{\small Result of the FIO: In green the prior distribution where $\mu$ is sampled from. In green the posterior distribution of $\mu$ for the $200$ simulations the closest to GE. }
 		\label{fig:abc}
 \end{figure}
 
-On the other hand this innovation rate remains pretty high: the mean value of $\mu$ for the best simulations is $.175$, thus leading to a rate of change of one after 6 time step. If this innovation rate has to be compared to the mutation process acting in biological evolution our result are order of magnitude smaller. This may underlie the difference of speed between biological and social process and the need for the agents to quickly adapt to complex situations.  This could be greatly ameliorate by introducing no-random innovation process and self-adapting strategy such as trial-and-error or more complex experience based learning.
+    Without surprise this innovation rate has to be inferior to $0.5$, it would otherwise means that agents are changing their prices almost once every two time steps. This would make the result of any interaction between agents meaningless and would prevent any positive change to be fixed in the population.
+
+On the other hand, this innovation rate remains pretty high: the mean value of $\mu$ for the best simulations is $0.175$, $ie$ a rate of change close to one change every 6 time steps. If this innovation rate has to be compared to the mutation process acting in biological evolution, our result are order of magnitude higher. This may underlie the difference of speed between biological and social process and the need for  social agents to quickly adapt to complex situations. 
+
+At the same time, this high rate of random changes would be drastically reduced if our agents were able to made no-random innovation and use self-adapting strategy which are processes closer to what is observed in real systems.
 
 }
 
 
 \headerbox{Concluding Remarks}{name=conclusion,column=1,below=res1}{
 
-	Though those first result are very limited and concentrated to a simple aspect of the system studied, they show how the use of simulation and model testing tools such as Fitting to Idealize Outcome, can help us to mix different field an. Coupling those result with simple empirical experiment on buisness innovation rate or psychological test on human can be good candidate aorigine apttern shown by model
-	
+This preliminary study shows how the use of simulation and model testing tools such as Fitting to Idealize Outcome, can help us articulate economic theory with other field. Coupled with empirical data and results from other experiments we could easily quantify if the right conditions were met in order to see the establishment of a General Equilibrium or not.
+
 }
 
 
